--- a/app/views/accounts/show/_activity.html.erb
+++ b/app/views/accounts/show/_activity.html.erb
@@ -66,7 +66,7 @@
         <div class="grid bg-container-inset rounded-xl grid-cols-12 items-center uppercase text-xs font-medium text-secondary px-5 py-3 mb-4">
           <div class="pl-0.5 col-span-8 flex items-center gap-4">
             <%= check_box_tag "selection_entry",
-                              class: "checkbox checkbox--light checkbox checkbox--light hidden lg:block",
+                              class: "checkbox checkbox--light hidden lg:block",
                               data: { 
                                 action: "bulk-select#togglePageSelection",
                                 checkbox_toggle_target: "selectionEntry"
