--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -25,14 +25,15 @@
                     class: "w-9 h-9 rounded-full",
                     loading: "lazy" %>
               <% else %>
-                <%= render DS::FilledIcon.new(
-                  variant: :text,
-                  text: entry.name,
-                  size: "lg",
-                  rounded: true
-                ) %>
+                <div class="hidden lg:flex">
+                  <%= render DS::FilledIcon.new(
+                    variant: :text,
+                    text: entry.name,
+                    size: "lg",
+                    rounded: true
+                  ) %>
+                </div>
               <% end %>
-            </div>
             </div>
             <div class="flex lg:hidden items-center gap-1 col-span-2 relative">
               <%= render "transactions/transaction_category", transaction: transaction %>
