--- a/app/views/transactions/searches/_form.html.erb
+++ b/app/views/transactions/searches/_form.html.erb
@@ -33,6 +33,7 @@
 
     <%= button_tag type: "button",
         id: "toggle-checkboxes-button",
+        aria: { label: t(".toggle_selection_checkboxes") },
         class: "lg:hidden font-medium whitespace-nowrap inline-flex items-center gap-1 rounded-lg px-3 py-2 text-sm text-primary border border-secondary hover:bg-surface-hover",
         data: {
           action: "click->checkbox-toggle#toggle",
