--- a/app/views/settings/_settings_nav.html.erb
+++ b/app/views/settings/_settings_nav.html.erb
@@ -48,7 +48,7 @@ nav_sections = [
 <div class="space-y-4">
   <div class="hidden lg:flex items-center gap-2 p-1.5">
     <%= render DS::Link.new(
-      text: "Back",
+      text: t("settings.settings_nav_link_large.previous"),
       icon: "chevron-left",
       href: previous_path,
       variant: "ghost",
@@ -85,7 +85,7 @@ nav_sections = [
     <ul class="flex space-y-1">
       <li>
         <%= render DS::Link.new(
-          text: "Back",
+          text: t("settings.settings_nav_link_large.previous"),
           icon: "chevron-left",
           href: previous_path,
           variant: "ghost",
