--- a/app/views/pages/dashboard/_balance_sheet.html.erb
+++ b/app/views/pages/dashboard/_balance_sheet.html.erb
@@ -78,7 +78,7 @@
                       <div class="flex items-center gap-3">
                         <%= render "accounts/logo", account: account, size: "sm", color: account_group.color %>
 
-                        <%= link_to account.name, account_path(account) %>
+                        <%= link_to account.name, account_path(account), class: "hover:underline" %>
                       </div>
 
                       <div class="ml-auto flex items-center text-right gap-6">
