--- a/app/views/settings/guides/show.html.erb
+++ b/app/views/settings/guides/show.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :page_title, "Guides" %>
 
-<div class="bg-container rounded-xl shadow-border-xs p-4 prose prose-sm max-w-none">
+<div class="bg-container rounded-xl shadow-border-xs p-4 prose prose-sm max-w-none prose-headings:text-primary prose-p:text-secondary prose-strong:text-primary prose-a:text-primary prose-li:text-secondary prose-code:text-primary">
   <%= @guide_content.html_safe %>
 </div>
