--- a/app/views/holdings/show.html.erb
+++ b/app/views/holdings/show.html.erb
@@ -58,7 +58,7 @@
               <% @holding.trades.each_with_index do |trade_entry, index| %>
                 <li class="flex gap-4 text-sm space-y-1">
                   <div class="flex flex-col items-center gap-1.5 pt-2">
-                    <div class="rounded-full h-1.5 w-1.5 bg-gray-300"></div>
+                    <div class="rounded-full h-1.5 w-1.5 bg-subdued"></div>
                     <% unless index == @holding.trades.length - 1 %>
                       <div class="h-12 w-px bg-alpha-black-200"></div>
                     <% end %>
