--- a/app/views/transactions/searches/filters/_date_filter.html.erb
+++ b/app/views/transactions/searches/filters/_date_filter.html.erb
@@ -3,7 +3,7 @@
   <%= form.date_field :start_date,
                       placeholder: "Start date",
                       value: @q[:start_date],
-                      class: "block w-full border border-secondary rounded-md bg-container py-2 pl-3 pr-3  focus:ring-gray-500 sm:text-sm" %>
+                      class: "block w-full border border-secondary rounded-md bg-container py-2 pl-3 pr-3 focus:ring-primary sm:text-sm" %>
   <%= form.date_field :end_date,
                       placeholder: "End date",
                       value: @q[:end_date],
