fix(investments): use design token for tooltip label text

--- a/app/views/investments/_value_tooltip.html.erb
+++ b/app/views/investments/_value_tooltip.html.erb
@@ -7,7 +7,7 @@
       <%= t(".total_value_tooltip") %>
     </div>
     <div class="flex pt-3">
-      <div class="text-gray-300">
+      <div class="text-subdued">
         <%= t(".cash") %>
       </div>
       <div class="fg-inverse ml-auto">
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="flex">
-      <div class="text-gray-300">
+      <div class="text-subdued">
         <%= t(".holdings") %>
       </div>
       <div class="fg-inverse ml-auto">
@@ -26,7 +26,7 @@
     <hr class="my-2 border-secondary">
 
     <div class="flex">
-      <div class="text-gray-300">
+      <div class="text-subdued">
         <%= t(".total") %>
       </div>
       <div class="fg-inverse font-bold ml-auto">
